--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
-    "name": "simple-emoji-map",
-    "version": "0.2.0",
-    "description": "A simple emoji map that can be built at any time",
-    "main": "index.js",
-    "module": "index.mjs",
-    "jsnext:main": "index.mjs",
-    "author": "David Sevilla Martín",
-    "license": "MIT",
-    "scripts": {
-        "install": "node bin/build",
-        "lint": "prettier --single-quote --trailing-comma es5 --print-width 80 --tab-width 4 --write bin/* *.js *.mjs *.md"
-    },
-    "dependencies": {
-        "app-root-path": "^2.1.0",
-        "cosmiconfig": "^5.0.6",
-        "emojibase-data": "^3.1.0",
-        "twemoji": "^11.0.1"
-    },
-    "devDependencies": {
-        "prettier": "^1.14.2"
-    }
+  "name": "simple-emoji-map",
+  "version": "0.2.0",
+  "description": "A simple emoji map that can be built at any time",
+  "main": "index.js",
+  "module": "index.mjs",
+  "jsnext:main": "index.mjs",
+  "author": "David Sevilla Martín",
+  "license": "MIT",
+  "scripts": {
+    "install": "node bin/build",
+    "lint": "prettier --single-quote --trailing-comma es5 --print-width 80 --tab-width 4 --write bin/* *.js *.mjs *.md"
+  },
+  "dependencies": {
+    "app-root-path": "^2.1.0",
+    "cosmiconfig": "^5.0.6",
+    "emojibase-data": "^3.1.0",
+    "twemoji": "^11.0.1"
+  },
+  "devDependencies": {
+    "prettier": "^1.14.2"
+  },
+  "bin": {
+    "simple-emoji-map": "build.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/datitisev/simple-emoji-map.git"
+  },
+  "bugs": {
+    "url": "https://github.com/datitisev/simple-emoji-map/issues"
+  },
+  "homepage": "https://github.com/datitisev/simple-emoji-map#readme"
 }
